# Vnexpress_crawler

./: .gitignore  .replit  README.md  config.py  pyproject.toml  replit.nix  scraper.py  utils.py  vnexpress_articles.txt  vnexpress_articles.xlsx
